fixed horizontal scrolling issue on landing page and realigned content boxes #226

--- a/app/source/css/landingPage.styl
+++ b/app/source/css/landingPage.styl
@@ -68,15 +68,18 @@
         }
         
         .landingpage-copy {
-            margin-top: 75px;
+            margin-bottom: 30px;
             padding: 30px; 0px; 30px; 30px;
             background: rgba(0, 152, 154, 0.75); 
-            @media $mediaMaxMd {
-                margin-top: 30px;
-            }
+
             @media $mediaMaxSm {
-                margin-top: 0px;
+                margin-bottom: 0;
+                margin-top: 0;
                 background: none;
+            }
+
+            @media $mediaMaxXs {
+                padding: 15px;
             }
         }
         .landingpage-copyBackground {
@@ -92,7 +95,7 @@
             }                     
         }
         .landingpage-background {
-            padding-top: $LargeNavBar-height + 15px;
+            padding-top: 30px;
             background: no-repeat center / cover;
             background-image:
               url('../images/Stocksy_txpa4f3500ae7T100_Small_1204339.jpg');
@@ -145,9 +148,7 @@
             h2 {
                 text-align: center;
             }
-            @media $mediaMaxSm {
-                margin: 15px;
-            }
+
             #job-title-selection {
                 margin: 10px;
                 button {
@@ -159,6 +160,7 @@
             }
             .LeadContent {
                 background: rgba(255, 255, 255, .85);
+                margin-top: 0;
             }
         }
         form {
